# rrdtool-python-bindings

./: .editorconfig  .pre-commit-config.yaml  Justfile  README.md  justfile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
src/: rrdtoolmodule.h
src/rrdtool/: rrdtoolmodule.c
tests/: test_bindings.py
